baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__02_parser__ns_auth_auth.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Config"
    L_BRACE "{"
    FIELD
      WORD "provider"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "secret"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Error"
    L_BRACE "{"
    FIELD
      WORD "realm"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "expired"
      TYPE_EXPR "bool"
        WORD "bool"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Role"
    L_BRACE "{"
    ENUM_VARIANT "Admin"
      WORD "Admin"
    ENUM_VARIANT "User"
      WORD "User"
    ENUM_VARIANT "Guest"
      WORD "Guest"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Token"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "role"
      TYPE_EXPR "Role"
        WORD "Role"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "TokenAlias"
    EQUALS "="
    TYPE_EXPR "Token"
      WORD "Token"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthIdentity"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
    cfg
}"
        L_BRACE "{"
        WORD "cfg"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthConstruct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "provider"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Config"
          L_BRACE "{"
          OBJECT_FIELD "provider: provider"
            WORD "provider"
            COLON ":"
            WORD "provider"
          COMMA ","
          OBJECT_FIELD
            WORD "secret"
            COLON ":"
            STRING_LITERAL "s3cret"
              QUOTE """
              WORD "s3cret"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthEnumReturn"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Role"
      WORD "Role"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "Role.Admin"
          WORD "Role"
          DOT "."
          WORD "Admin"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthEnumMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "r"
        COLON ":"
        TYPE_EXPR "Role"
          WORD "Role"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "r"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Role.Admin"
                WORD "Role"
                DOT "."
                WORD "Admin"
            FAT_ARROW "=>"
            STRING_LITERAL "admin"
              QUOTE """
              WORD "admin"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Role.User"
                WORD "Role"
                DOT "."
                WORD "User"
            FAT_ARROW "=>"
            STRING_LITERAL "user"
              QUOTE """
              WORD "user"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Role.Guest"
                WORD "Role"
                DOT "."
                WORD "Guest"
            FAT_ARROW "=>"
            STRING_LITERAL "guest"
              QUOTE """
              WORD "guest"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthAliasParam"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "t"
        COLON ":"
        TYPE_EXPR "TokenAlias"
          WORD "TokenAlias"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "t.value"
          WORD "t"
          DOT "."
          WORD "value"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthThrowClass"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "0"
                INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD
                  WORD "realm"
                  COLON ":"
                  STRING_LITERAL "auth failed"
                    QUOTE """
                    WORD "auth"
                    WORD "failed"
                    QUOTE """
                COMMA ","
                OBJECT_FIELD "expired: true"
                  WORD "expired"
                  COLON ":"
                  WORD "true"
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "_"
                WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthThrowEnum"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "0"
                INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              PATH_EXPR "Role.Guest"
                WORD "Role"
                DOT "."
                WORD "Guest"
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "_"
                WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthMakeToken"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "v"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Token"
      WORD "Token"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Token"
          L_BRACE "{"
          OBJECT_FIELD "value: v"
            WORD "value"
            COLON ":"
            WORD "v"
          COMMA ","
          OBJECT_FIELD
            WORD "role"
            COLON ":"
            PATH_EXPR "Role.User"
              WORD "Role"
              DOT "."
              WORD "User"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesRootConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.Config"
          WORD "root"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.key"
          WORD "cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesRootStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.Status"
      WORD "root"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.Status.Pending"
          WORD "root"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Pending"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthMatchesRootStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "root.Status"
          WORD "root"
          DOT "."
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Ok"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Ok"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Failed"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Failed"
            FAT_ARROW "=>"
            STRING_LITERAL "failed"
              QUOTE """
              WORD "failed"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Pending"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Pending"
            FAT_ARROW "=>"
            STRING_LITERAL "pending"
              QUOTE """
              WORD "pending"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthThrowsRootError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "0"
                INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                PATH_EXPR "root.Error"
                  WORD "root"
                  DOT "."
                  WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD "code: 403"
                  WORD "code"
                  COLON ":"
                  INTEGER_LITERAL "403"
                COMMA ","
                OBJECT_FIELD
                  WORD "message"
                  COLON ":"
                  STRING_LITERAL "forbidden"
                    QUOTE """
                    WORD "forbidden"
                    QUOTE """
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "_"
                WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesLlmConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.llm.Config"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.model"
          WORD "cfg"
          DOT "."
          WORD "model"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesLlmResponse"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "r"
        COLON ":"
        TYPE_EXPR "root.llm.Response"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Response"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "r.text"
          WORD "r"
          DOT "."
          WORD "text"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesLlmStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.llm.Status"
      WORD "root"
      DOT "."
      WORD "llm"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.llm.Status.Ready"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Ready"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthMatchesLlmStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "root.llm.Status"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Ready"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Ready"
            FAT_ARROW "=>"
            STRING_LITERAL "ready"
              QUOTE """
              WORD "ready"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Generating"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Generating"
            FAT_ARROW "=>"
            STRING_LITERAL "generating"
              QUOTE """
              WORD "generating"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Done"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Done"
            FAT_ARROW "=>"
            STRING_LITERAL "done"
              QUOTE """
              WORD "done"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthUsesNestedClient"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "c"
        COLON ":"
        TYPE_EXPR "root.llm.openai.Client"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "openai"
          DOT "."
          WORD "Client"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "c.api_key"
          WORD "c"
          DOT "."
          WORD "api_key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthMixedConfigs"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "auth_cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      COMMA ","
      PARAMETER
        WORD "root_cfg"
        COLON ":"
        TYPE_EXPR "root.Config"
          WORD "root"
          DOT "."
          WORD "Config"
      COMMA ","
      PARAMETER
        WORD "llm_cfg"
        COLON ":"
        TYPE_EXPR "root.llm.Config"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "auth_cfg.provider"
          WORD "auth_cfg"
          DOT "."
          WORD "provider"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AuthMixedErrors"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "auth_err"
        COLON ":"
        TYPE_EXPR "Error"
          WORD "Error"
      COMMA ","
      PARAMETER
        WORD "root_err"
        COLON ":"
        TYPE_EXPR "root.Error"
          WORD "root"
          DOT "."
          WORD "Error"
      COMMA ","
      PARAMETER
        WORD "llm_err"
        COLON ":"
        TYPE_EXPR "root.llm.Error"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "auth_err.realm"
          WORD "auth_err"
          DOT "."
          WORD "realm"
        R_BRACE "}"

=== ERRORS ===
None
